Change footer color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ header {
 
 footer {
     background-color: #525252;
-    color: #fafafa;
+    color: #ff0000;
     min-height: 120px;
     margin: 0;
 }
