--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #ffffff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -43,6 +47,23 @@ h4 {
 
 .inline-block {
     display: inline-block;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 /*----------------------------------------Heading */
@@ -119,6 +140,7 @@ header {
     color: #fafafa;
     font-size: 26px;
 }
+
 .menuitem span {
     display: block;
     width: 100%;
@@ -141,7 +163,7 @@ header {
 
 footer {
     background-color: #525252;
-    color: #ff0000;
+    color: #fafafa;
     min-height: 120px;
     margin: 0;
 }
