--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*----------------------------------------Colours */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
 }
 
 .bg-color-three-reasons {
-    background-color: #ffffff;
+    background-color: #fff;
+}
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
 }
 
 .bg-color-work-history {
     background-color: #9b59b6;
 }
 
-.bg-color-personal-info {
-    background-color: #f4f4f4;
+.bg-color-contact {
+    background-color: #fff;
 }
 
 .ui-menu-color-home {
@@ -34,7 +38,7 @@
     background-color: #525252;
 }
 
-/*----------------------------------------special paddings/margins/text */
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
@@ -75,7 +79,7 @@ h4 {
     margin-bottom: 40px;
 }
 
-/*----------------------------------------Heading */
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -86,7 +90,7 @@ header {
 }
 
 .logo {
-    background: url('../images/mypic.jpg');
+    background: url("../images/rosie.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -101,16 +105,16 @@ header {
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #ffffff;
+    color: #fff;
 }
 
-.title{
+.title {
     font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #ffffff;
+    color: #fff;
 }
 
 .list-inline-item:not(:last-child) {
@@ -121,13 +125,13 @@ header {
     font-size: 0;
 }
 
-#nav {
-    margin: 0;
-}
-
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -161,14 +165,14 @@ header {
     letter-spacing: 2px;
 }
 
-/*----------------------------------------Hover.css */
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/*----------------------------------------Footer */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -220,7 +224,7 @@ footer {
     padding: 20px;
 }
 
-/*----------------------------------------Three Reasons */
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
@@ -231,7 +235,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/*----------------------------------------Personal Info */
+/* ----------------------------------------Personal Info */
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -261,11 +265,12 @@ footer {
     font-weight: 700;
 }
 
-.personal-info-item .key .value {
+.personal-info-item .value {
+    position: relative;
     width: 60%;
 }
 
-/*----------------------------------------Skills */
+/* ----------------------------------------Skills */
 
 .progress {
     position: relative;
@@ -275,18 +280,18 @@ footer {
 
 .progress-type {
     position: absolute;
-    left: 0;
+    left: 0px;
     font-weight: 400;
     padding: 3px 30px 2px 10px;
     color: #fafafa;
-    background-color: rgba(25, 25, 25, 0.2)
+    background-color: rgba(25, 25, 25, 0.2);
 }
 
 .progress-section {
     margin: 40px 20px;
 }
 
-/*----------------------------------------Work History */
+/* ----------------------------------------Work History */
 
 .history-heading {
     color: #fafafa;
@@ -294,7 +299,7 @@ footer {
 }
 
 .timeline-item {
-    padding: 43m 2em 0em 2em;
+    padding: 4em 2em 0em 2em;
     position: relative;
     color: #fafafa;
     border-left: 1px solid;
@@ -332,4 +337,37 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/* ----------------------------------------Contact Form */
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+/* ----------------------------------------Media Queries */
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
